# opengl-comp-graph

./: CMakeLists.txt  lab1.c
